# miso_code

./: README.md  pyproject.toml
assets/: 100_genes.csv  5000_genes.csv  TCGA-A1-A0SB-01Z-00-DX1.B34C267B-CAAA-4AB6-AD5C-276C26F997A1_coords.npy  genes_her2st_all.csv  splits_benchmark_her2st.pkl
miso/: train.py
miso/confs/: distil.yaml  train_10x.yaml  train_her2st.yaml
miso/data/: __init__.py
miso/data/loading/: __init__.py  dataset.py
miso/data/processing/: __init__.py  compute_neighbors.py  extract_features.py  rewrite_slide.py
miso/distillation/: generate_distillation_labels.py
miso/engine/: __init__.py  losses.py  super_resolved_inference.py  training.py
miso/metrics/: __init__.py  compute_metrics.py
miso/models/: __init__.py  local_attention.py  simple_mil.py
miso/models/layers/: __init__.py  attention.py
miso/scripts/: process_data.py  process_her2st.py
notebooks/: benchmark_her2st.ipynb  super-resolved-inference.ipynb
